# CPL_2024

./: README.md
Begin_Code/gitm/: Makefile  gitm  gitm.c  icon.txt
Begin_Code/majsa/: CMakeLists.txt  Makefile  README.md  compile.ps1  compile.sh  public_answer.json
Begin_Code/majsa/src/: AgariChecker.c  AgariChecker.h  Calculator.h  YakuChecker.c  YakuChecker.h  main.c  main.h  majsa.c  majsa.h
C语言程序设计：现代方法/: note_for_book.md
C语言程序设计：现代方法/chapter_2/: star  tax  tax.c
C语言程序设计：现代方法/chapter_3/: ISBN.c  a.out  fomat_item.c  fomat_year.c  telephone_number.c  test.c  非编程题.md
Example/chapter4/: upc  upc.c
Exercises/: note_for_book.md
Exercises/chapter_2/: HelloWorld.c  Print_star.c
Exercises/chapter_3/: matrix.c
Lecture/08_C_string/: class  class.c  exercise.c  strcmp.c  strcop.c
Lecture/09_doublie_pointer/: makefile  note.md  scores  scores.c  selection-sort-string  selection-sort-string.c
Lecture/10_function_pointer/: note.md
